--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Wissemdr00.github.io/My-Portfolio"
+  "homepage": "https://wissemxdev.me"
 ,
   "name": "portfolio",
   "version": "0.1.0",
